# autonomous-test-agent

./: .env.example  .gitignore  README.MD  VIDEO_UPLOAD_GUIDE.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: test_suites.json
data/generated_tests/: Dec-03-Audit-Test_TC001_add_item_to_cart_and_verify_count.py  Dec-03-Audit-Test_metadata.json  Dec-03-First-Test_TC001_add_an_item_to_the_cart_and_verify_cart_contents.py  Dec-03-First-Test_metadata.json  Dec-06-Audit-Test_TC001_add_product_to_cart_verify_and_remove.py  Dec-06-Audit-Test_TC001_purchase_sauce_labs_backpack_and_complete_checkout.py  Dec-06-Audit-Test_metadata.json  (+19 more)
docs/: ALERT_HANDLING_GUIDE.md  ARCHITECTURE_GUIDE.md  AUDIT_LOGGING_GUIDE.md  Agentic_Test_Architecture_Playwright_LLMs.html  END_TO_END_FLOWS.md  EnhancementPlan.MD  NewRequirements.MD  OPTIMIZATION_ANALYSIS_AND_PLAN.md  OptimizationandSecurityRoadmap.md  PROVIDER_SWITCH_GUIDE.md  PlaywrightAgentsDeepDive.html  Playwright_Agents_Deep_Dive.html  RECORDING_FLOW.MD  SECURITY_AUDIT_GUIDE.md  SECURITY_EXPLANATION.md  SECURITY_VERIFICATION.md  Secure_AI_Test_Automation_Agent_Infographic.html  TECH.MD  Technical_Data_Flow_Visualization copy.html  Technical_Data_Flow_Visualization_tobeVerified.html  architecture_flow.html  end_to_end_flows.html  input_and_screenshot_sanitization.md
scripts/: verify_credential_isolation.py
src/core/: config.py  (+4 more)
templates/: audit_dashboard.html  audit_dashboard_enhanced.html  index.html
tests/: conftest.py  debug_explorer.py  test_browser_visible.py  test_ollama.py  test_visible_actions.py
(+27 files in other folders)
