[project]
name = "autonomous-test-agent"
version = "1.0.0"
description = "Autonomous browser-based QA agent — generates and records manual & automated tests using AI"
readme = "README.MD"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["F401"]
